--- a/Code/IRC/Data/Defs/Resources.resx
+++ b/Code/IRC/Data/Defs/Resources.resx
@@ -117,6 +117,12 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="strBoolModeStateOffDesc" xml:space="preserve">
+    <value>Off</value>
+  </data>
+  <data name="strBoolModeStateOnDesc" xml:space="preserve">
+    <value>On</value>
+  </data>
   <data name="strChanServOptAtTheme" xml:space="preserve">
     <value>AtTheme</value>
   </data>
@@ -292,5 +298,14 @@
   </data>
   <data name="strSASL" xml:space="preserve">
     <value>Use SASL</value>
+  </data>
+  <data name="strThreeWayModeStateForcedOff" xml:space="preserve">
+    <value>ChanServ is preventing this mode from being set.</value>
+  </data>
+  <data name="strThreeWayModeStateLockedOnDesc" xml:space="preserve">
+    <value>ChanServ is ensuring this mode is set</value>
+  </data>
+  <data name="strThreeWayModeStateNoPrefDesc" xml:space="preserve">
+    <value>ChanServ isn't controlling this mode</value>
   </data>
 </root>
