--- a/Code/IRC/Data/Resources.resx
+++ b/Code/IRC/Data/Resources.resx
@@ -117,11 +117,91 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="strActionEventTypeBanOfUserDesc" xml:space="preserve">
+    <value>The user {0} was banned from the channel by {1}.</value>
+    <comment>All occurrences of "{0}" will be replaced with the nick of the user that was banned.  All occurrences of "{1}" will be replaced by the nick of the user that did the banning.</comment>
+  </data>
+  <data name="strActionEventTypeChanModeAddedAndRemovedDesc" xml:space="preserve">
+    <value>The modes {0} were just added to the channel while modes {1} were removed.</value>
+    <comment>All occurrences of "{0}" will be replaced by a description of the new modes for the channel.  All occurrences of "{1}" will be replaced by a description of the modes that were removed.  In both cases, this could be a list of textual descriptions or a mode string.</comment>
+  </data>
+  <data name="strActionEventTypeChanModeAddedDesc" xml:space="preserve">
+    <value>The modes {0} were just added to the channel.</value>
+    <comment>All occurrences of "{0}" will be replaced by a description of the new modes.  Depending on the user preferences, this could be a list of textual descriptions of the new modes or a mode string.</comment>
+  </data>
+  <data name="strActionEventTypeChanModeRemovedDesc" xml:space="preserve">
+    <value>The modes {0} were just removed from the channel.</value>
+    <comment>All occurrences of "{0}" will be replaced by a description of the modes removed.  Depending on the user's preferences, this could be a list of textual descriptions or a mode string.</comment>
+  </data>
+  <data name="strActionEventTypeJoinDesc" xml:space="preserve">
+    <value>The user {0} has just joined the channel.</value>
+    <comment>All occurrences of "{0}" will be replaced by the nick of the user that just joined the channel.</comment>
+  </data>
+  <data name="strActionEventTypeKickOfUserDesc" xml:space="preserve">
+    <value>The user {0} was kicked from the channel by {1}.</value>
+    <comment>All occurrences of "{0}" will be replaced with the nick of the user that was kicked.  All occurrences of "{1}" will be replaced by the nick of the user that did the kicking.</comment>
+  </data>
+  <data name="strActionEventTypeNickOfUserChangedDesc" xml:space="preserve">
+    <value>The user formerly known as {0} is now known as {1}.</value>
+    <comment>All occurrences of "{0}" will be replaced by the old nick of the user.  All occurrences of "{1}" will be replaced by the new nick.</comment>
+  </data>
+  <data name="strActionEventTypePartDesc" xml:space="preserve">
+    <value>The user {0} just left the channel.</value>
+    <comment>All occurrences of "{0}" will be replaced by the nick of the user that left the channel.</comment>
+  </data>
+  <data name="strActionEventTypeQuietOfUserDesc" xml:space="preserve">
+    <value>The user {0} was quieted in the channel by {1}.</value>
+    <comment>All occurrences of "{0}" will be replaced by the nick of the user being quieted.  All </comment>
+  </data>
+  <data name="strActionEventTypeQuitDesc" xml:space="preserve">
+    <value>The user {0} just left the network {1} of which this channel is part of.</value>
+    <comment>All occurrences of "{0}" will be replaced by the nick of the user that just left the network.  All occurrences of "{1}" will be replaced by the network name.</comment>
+  </data>
+  <data name="strActionEventTypeTopicChangedDesc" xml:space="preserve">
+    <value>The topic for {0} has been changed to “{1}”.</value>
+    <comment>All occurrences of "{0}" will be replaced by the proper name (always with the leading #) of the channel.  All occurrences of "{1}" will be replaced with the new topic.  It's suggested you make sure the new topic is in quotes, preferably typographical quotes.</comment>
+  </data>
+  <data name="strActionEventTypeUnbanOfUserDesc" xml:space="preserve">
+    <value>The user {0} was unbanned from the channel by {1}.</value>
+    <comment>All occurrences of "{0}" will be replaced by the nick of the user that was unbanned from the channel.  All occurrences of the "{1}" will be replaced by the nick that did the unbanning.</comment>
+  </data>
+  <data name="strActionEventTypeUnquietOfUserDesc" xml:space="preserve">
+    <value>{1} is now permitting {0} to talk again in the channel.</value>
+    <comment>All occurrences of "{0}" will be replaced by the nick of the user that was unquieted.  All occurrences of "{1}" will be replaced by the nick of the user that did the unquieting.</comment>
+  </data>
+  <data name="strActionEventTypeUserDehalfOppedDesc" xml:space="preserve">
+    <value>The user {0} just revoked half-op status from the user {1}.</value>
+    <comment>All occurrences of "{0}" will be replaced by the nick of the user who revoked half-op status.  All occurrences of "{1}" will be replaced by the nick of the user who lost half op status.</comment>
+  </data>
+  <data name="strActionEventTypeUserDeoppedDesc" xml:space="preserve">
+    <value>The user {0} just revoked op status from the user {1}.</value>
+    <comment>All occurrences of "{0}" will be replaced by the nick of the user that revoked the op status.  All occurrences of "{1}" will be replaced by the nick of the user who lost op status.</comment>
+  </data>
+  <data name="strActionEventTypeUserDevoicedDesc" xml:space="preserve">
+    <value>The user {0} just lost voice in this channel.  This action was taken by {1}.</value>
+    <comment>All occurrences of "{0}" will be replaced by the nick of the user who just lost voice.  All occurrences of "{1}" will be replaced by the nick of the user who did the devoicing.</comment>
+  </data>
+  <data name="strActionEventTypeUserHalfOppedDesc" xml:space="preserve">
+    <value>The user {0} just issued half-op status to the user {1}.</value>
+    <comment>All occurrences of "{0}" will be replaced by the nick of the user who issued the half-op status.  All occurrences of "{1}" will be replaced by the nick of the user who received half-op status.</comment>
+  </data>
+  <data name="strActionEventTypeUserOppedDesc" xml:space="preserve">
+    <value>The user {0} just issued op status to the user {1}.</value>
+    <comment>All occurrences of "{0}" will be replaced by the nick of the user who issued the op status.  All occurrences of "{1}" will be replaced by the nick of the user who received the op status.</comment>
+  </data>
+  <data name="strActionEventTypeUserVoicedDesc" xml:space="preserve">
+    <value>The user {0} just gained voice in this channel.  This action was taken by {1}.</value>
+    <comment>All occurrences of "{0}" will be replaced by the nick of the user who just gained voice.  All occurrences of "{1}" will be replaced by the nick of the user that issued the voice.</comment>
+  </data>
   <data name="strBoolModeStateOffDesc" xml:space="preserve">
     <value>Off</value>
   </data>
   <data name="strBoolModeStateOnDesc" xml:space="preserve">
     <value>On</value>
+  </data>
+  <data name="strChanNameDescForTree" xml:space="preserve">
+    <value>{0} is an IRC channel on the network {1}.</value>
+    <comment>All occurrences of "{0}" will be replaced with the proper channel name (always including the leading #).  All occurrences of "{1}" will be replaced with the name of the network.</comment>
   </data>
   <data name="strChanServOptAtTheme" xml:space="preserve">
     <value>AtTheme</value>
@@ -140,6 +220,18 @@
   </data>
   <data name="strChanServOptUnknownToolTip" xml:space="preserve">
     <value>Select this if the network has a ChanServ, but you don't know much about it</value>
+  </data>
+  <data name="strConversationGroupChannelsDesc" xml:space="preserve">
+    <value>All your channels on this IRC network are here.</value>
+  </data>
+  <data name="strConversationGroupRemoteUsersDesc" xml:space="preserve">
+    <value>Anytime you PM another user, a service, or a bot on this network, that conversation will show up here.</value>
+  </data>
+  <data name="strConversationGroupTypeChannels" xml:space="preserve">
+    <value>Channels</value>
+  </data>
+  <data name="strConversationGroupTypeRemoteUsers" xml:space="preserve">
+    <value>Users</value>
   </data>
   <data name="strDefChanModeForwardDesc" xml:space="preserve">
     <value>join throttling to be sent to another channel.</value>
@@ -275,6 +367,10 @@
   <data name="strNetworkInfoTypePredefinedToolTipText" xml:space="preserve">
     <value>A network whose information is provided by Best Chat and hasn't been changed.</value>
   </data>
+  <data name="strNetworkNameDescForTree" xml:space="preserve">
+    <value>Every channel join and user (or service/bot) you talk in the network “{0}” will be listed here.</value>
+    <comment>All occurrences of "{0}" will be replaced with the network name.</comment>
+  </data>
   <data name="strNickServ" xml:space="preserve">
     <value>Attempt to use NickServ (Requires a network that provides NickServ)</value>
   </data>
@@ -295,6 +391,22 @@
   </data>
   <data name="strNickServOptUnknownToolTip" xml:space="preserve">
     <value>Select this if the network has a NickServ, but you don't know much about it</value>
+  </data>
+  <data name="strOneChannel" xml:space="preserve">
+    <value>Channel</value>
+  </data>
+  <data name="strOneRemoteUser" xml:space="preserve">
+    <value>Remote User</value>
+  </data>
+  <data name="strPostActionMeDesc" xml:space="preserve">
+    <value>me</value>
+  </data>
+  <data name="strPostActionSayDesc" xml:space="preserve">
+    <value>say</value>
+  </data>
+  <data name="strRemoteUserDescForTree" xml:space="preserve">
+    <value>{0} is a remote user on the IRC network {1}.</value>
+    <comment>All occurrences of "{0}" will be replaced with the current nick of the user on the other end of this conversation.  All occurrences of {1} will be replaced with the name of the network.</comment>
   </data>
   <data name="strSASL" xml:space="preserve">
     <value>Use SASL</value>
